--- a/components/d8w831gkn-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/d8w831gkn-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: d8w831gkn-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-659c915e5c.9ffc.p3.openshiftapps.com/rhtap/rhtap-qe:41db89d84e30057da7f39895f5655aa93e6c703b@sha256:d8acd280a103bc533efa1bfa331ef611053381c99098c993278ff54c1cbae9e7
+          name: container-image
